--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiodns==3.0.0
-aiohttp==3.8.4
+aiohttp==3.8.5
 aiohttp-socks==0.6.0
 aioredis==1.3.1
 aiorpcX==0.22.1
@@ -41,7 +41,7 @@ cachetools==4.2.2
 cashaddress==1.0.6
 cchardet==2.1.7
 celery==5.2.7
-certifi==2022.12.7
+certifi==2023.7.22
 cffi==1.14.6
 cfgv==3.3.1
 channels==4.0.0
@@ -62,8 +62,8 @@ coreschema==0.0.4
 cosmospy==6.0.0
 coverage==5.5
 crypto==1.4.1
-cryptography==39.0.1
-cryptos==2.0.6
+cryptography==41.0.5
+cryptos==2.0.9
 cssselect2==0.7.0
 cytoolz==0.11.0
 daphne==4.0.0
@@ -74,7 +74,7 @@ Deprecated==1.2.14
 diff-match-patch==20200713
 distlib==0.3.2
 dj-rest-auth==2.2.6
-Django==3.2.19
+Django==3.2.23
 django-admin-rangefilter==0.9.0
 django-admin-tools==0.9.2
 django-allauth==0.52.0
@@ -127,13 +127,13 @@ future==0.18.3
 fuzzywuzzy==0.18.0
 graypy==2.1.0
 gunicorn==20.1.0
-h11==0.12.0
+h11==0.14.0
 hdwallets==0.1.2
 hexbytes==0.2.2
 hiredis==2.0.0
 html5lib==1.1
-httpcore==0.15.0
-httpx==0.23.3
+httpcore==1.0.2
+httpx==0.25.1
 humanize==3.11.0
 hyperlink==21.0.0
 identify==2.2.13
@@ -142,7 +142,7 @@ idna-ssl==1.1.0
 immutables==0.16
 importlib-metadata==4.8.1
 importlib-resources==5.2.2
-incremental==21.3.0
+incremental==22.10.0
 inflection==0.5.1
 iniconfig==1.1.1
 invoke==1.6.0
@@ -197,7 +197,7 @@ pathlib2==2.3.6
 pbkdf2==1.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.4.0
+Pillow==10.0.1
 pkgutil_resolve_name==1.3.10
 platformdirs==2.3.0
 pluggy==1.0.0
@@ -209,7 +209,6 @@ protobuf==4.22.3
 psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
-py==1.11.0
 pyaes==1.6.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -220,17 +219,17 @@ pycryptodome==3.10.1
 pycryptodomex==3.17
 pydyf==0.5.0
 pyflakes==2.3.1
-Pygments==2.10.0
+Pygments==2.15.1
 PyHamcrest==2.0.2
 PyJWT==2.6.0
 PyNaCl==1.4.0
-pyOpenSSL==23.0.0
+pyOpenSSL==23.3.0
 pyotp==2.6.0
 pyparsing==2.4.7
 pyphen==0.13.0
 pyrsistent==0.18.0
 PySocks==1.7.1
-pytest==6.2.5
+pytest==7.2.0
 pytest-cov==2.12.1
 pytest-django==4.4.0
 python-binance==1.0.12
@@ -240,7 +239,7 @@ python-Levenshtein==0.12.2
 python-memcached==1.59
 python-ripple-lib==1.0.11
 python-socks==1.2.4
-python-telegram-bot==13.15
+python-telegram-bot==20.6
 python3-openid==3.2.0
 pytz==2022.7.1
 pyxdg==0.27
@@ -275,12 +274,12 @@ tblib==1.7.0
 tinycss2==1.2.1
 toml==0.10.2
 toolz==0.11.1
-tornado==6.1
+tornado==6.3.3
 traitlets==5.1.0
 tronpy==0.4.0
 trontxsize==1.0.4
 twilio==6.50.1
-Twisted==22.10.0
+Twisted==23.10.0rc1
 txaio==21.2.1
 typing_extensions==4.5.0
 tzdata==2022.2
@@ -288,7 +287,7 @@ tzlocal==3.0
 ua-parser==0.10.0
 ujson==5.7.0
 uritemplate==3.0.1
-urllib3==1.26.16
+urllib3==1.26.18
 user-agents==2.2.0
 varint==1.0.2
 vine==5.0.0
